<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarvesh.bizhunt.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/welcome_to_chatting"
        android:textSize="24sp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:hint="@string/signup"
        android:id="@+id/start_reg_btn"
        android:textSize="24dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_log_btn"
        android:hint="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:textSize="24dp"
        android:layout_below="@+id/start_reg_btn"
        android:gravity="center"

        />

</RelativeLayout>
